# traffic-sim-t2-osm

./: .gitignore  README.md  codex_context.txt  pyproject.toml
src/traffic_sim/: __init__.py  agent.py  cli.py  config.py  controllers.py  env.py  events.py  model.py  osm_loader.py  road_network.py  simulation.py  traffic_signals.py  train.py  utils.py  vehicle.py  visualization.py
