[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "traffic-sim"
version = "0.1.0"
description = "Adaptive traffic simulator using OpenStreetMap data and pygame visualisation"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "osmnx>=1.9.2",
    "networkx>=3.2",
    "numpy>=1.26",
    "pygame>=2.5",
    "shapely>=2.0",
    "geopandas>=0.14",
    "scipy>=1.11",
    "typer>=0.9",
    "torch>=2.2",
    "gymnasium>=0.29",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "black>=24.3",
]

[project.scripts]
traffic-sim = "traffic_sim.cli:main"
